--- a/posts/2023-07-18-targets-query/targets.ipynb
+++ b/posts/2023-07-18-targets-query/targets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,37 +92,37 @@
    "source": [
     "# Make a dictionary of all encffs (only first time)\n",
     " \n",
-    "encffs = {}\n",
-    "for id in df['identifier']:\n",
-    "    encffs[id] = get_json(id)"
+    "# encffs = {}\n",
+    "# for id in df['identifier']:\n",
+    "#     encffs[id] = get_json(id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save encffs to a file\n",
-    "with open('/Users/lauvav/Desktop/deep-learning/encffs.json', 'w') as file:\n",
-    "    json.dump(encffs, file, indent=4)\n"
+    "# # Save encffs to a file\n",
+    "# with open('/Users/lauvav/Desktop/deep-learning/encffs.json', 'w') as file:\n",
+    "#     json.dump(encffs, file, indent=4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the variable from the saved encffs file\n",
     "\n",
-    "# with open('variable.json', 'r') as file:\n",
-    "#     loaded_variable = json.load(file)"
+    "with open('/Users/lauvav/Desktop/deep-learning/encffs.json', 'r') as file:\n",
+    "    encffs = json.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -207,150 +207,165 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5000</th>\n",
-       "      <td>5000</td>\n",
+       "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>CNhs11833</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENCFF833POA</td>\n",
+       "      <td>/home/drk/tillage/datasets/human/dnase/encode/...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>DNASE:cerebellum male adult (27 years) and mal...</td>\n",
+       "      <td>central nervous system</td>\n",
+       "      <td></td>\n",
+       "      <td>brain</td>\n",
+       "      <td>ectoderm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENCFF110QGM</td>\n",
+       "      <td>/home/drk/tillage/datasets/human/dnase/encode/...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>DNASE:frontal cortex male adult (27 years) and...</td>\n",
+       "      <td>central nervous system</td>\n",
+       "      <td></td>\n",
+       "      <td>brain</td>\n",
+       "      <td>ectoderm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENCFF880MKD</td>\n",
+       "      <td>/home/drk/tillage/datasets/human/dnase/encode/...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>DNASE:chorion</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>extraembryonic component</td>\n",
+       "      <td>mesoderm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENCFF463ZLQ</td>\n",
+       "      <td>/home/drk/tillage/datasets/human/dnase/encode/...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>DNASE:Ishikawa treated with 0.02% dimethyl sul...</td>\n",
+       "      <td>reproductive system</td>\n",
+       "      <td>cancer cell</td>\n",
+       "      <td>uterus</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENCFF890OGQ</td>\n",
+       "      <td>/home/drk/tillage/datasets/human/dnase/encode/...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>DNASE:GM03348</td>\n",
+       "      <td>integumental system</td>\n",
+       "      <td>fibroblast</td>\n",
+       "      <td>skin of body, connective tissue</td>\n",
+       "      <td>ectoderm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5308</th>\n",
+       "      <td>5308</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CNhs14239</td>\n",
        "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
        "      <td>384</td>\n",
        "      <td>1</td>\n",
        "      <td>sum</td>\n",
-       "      <td>CAGE:chondrosarcoma cell line:SW 1353</td>\n",
+       "      <td>CAGE:epithelioid sarcoma cell line:HS-ES-2R</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5001</th>\n",
-       "      <td>5001</td>\n",
+       "      <th>5309</th>\n",
+       "      <td>5309</td>\n",
        "      <td>0</td>\n",
-       "      <td>CNhs11834</td>\n",
+       "      <td>CNhs14240</td>\n",
        "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
        "      <td>384</td>\n",
        "      <td>1</td>\n",
        "      <td>sum</td>\n",
-       "      <td>CAGE:carcinoid cell line:NCI-H1770</td>\n",
+       "      <td>CAGE:squamous cell lung carcinoma cell line:RE...</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5002</th>\n",
-       "      <td>5002</td>\n",
+       "      <th>5310</th>\n",
+       "      <td>5310</td>\n",
        "      <td>0</td>\n",
-       "      <td>CNhs11835</td>\n",
+       "      <td>CNhs14241</td>\n",
        "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
        "      <td>384</td>\n",
        "      <td>1</td>\n",
        "      <td>sum</td>\n",
-       "      <td>CAGE:osteoclastoma cell line:Hs 706.T</td>\n",
+       "      <td>CAGE:gastric cancer cell line:GSS</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5003</th>\n",
-       "      <td>5003</td>\n",
+       "      <th>5311</th>\n",
+       "      <td>5311</td>\n",
        "      <td>0</td>\n",
-       "      <td>CNhs11836</td>\n",
+       "      <td>CNhs14244</td>\n",
        "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
        "      <td>384</td>\n",
        "      <td>1</td>\n",
        "      <td>sum</td>\n",
-       "      <td>CAGE:Ewing's sarcoma cell line:Hs 863.T</td>\n",
+       "      <td>CAGE:carcinoid cell line:NCI-H727</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5004</th>\n",
-       "      <td>5004</td>\n",
+       "      <th>5312</th>\n",
+       "      <td>5312</td>\n",
        "      <td>0</td>\n",
-       "      <td>CNhs11837</td>\n",
+       "      <td>CNhs14245</td>\n",
        "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
        "      <td>384</td>\n",
        "      <td>1</td>\n",
        "      <td>sum</td>\n",
-       "      <td>CAGE:transitional cell carcinoma cell line:Hs ...</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5005</th>\n",
-       "      <td>5005</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CNhs11838</td>\n",
-       "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
-       "      <td>384</td>\n",
-       "      <td>1</td>\n",
-       "      <td>sum</td>\n",
-       "      <td>CAGE:alveolar cell carcinoma cell line:SW 1573</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5006</th>\n",
-       "      <td>5006</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CNhs11840</td>\n",
-       "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
-       "      <td>384</td>\n",
-       "      <td>1</td>\n",
-       "      <td>sum</td>\n",
-       "      <td>CAGE:bronchioalveolar carcinoma cell line:NCI-...</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5007</th>\n",
-       "      <td>5007</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CNhs11841</td>\n",
-       "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
-       "      <td>384</td>\n",
-       "      <td>1</td>\n",
-       "      <td>sum</td>\n",
-       "      <td>CAGE:bronchogenic carcinoma cell line:ChaGo-K-1</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5008</th>\n",
-       "      <td>5008</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CNhs11842</td>\n",
-       "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
-       "      <td>384</td>\n",
-       "      <td>1</td>\n",
-       "      <td>sum</td>\n",
-       "      <td>CAGE:fibrous histiocytoma cell line:GCT TIB-223</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5009</th>\n",
-       "      <td>5009</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CNhs11843</td>\n",
-       "      <td>/home/drk/tillage/datasets/human/cage/fantom/C...</td>\n",
-       "      <td>384</td>\n",
-       "      <td>1</td>\n",
-       "      <td>sum</td>\n",
-       "      <td>CAGE:hairy cell leukemia cell line:Mo</td>\n",
+       "      <td>CAGE:lung adenocarcinoma, papillary cell line:...</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
        "      <td>NA</td>\n",
@@ -358,65 +373,85 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5313 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      index  genome identifier  \\\n",
-       "5000   5000       0  CNhs11833   \n",
-       "5001   5001       0  CNhs11834   \n",
-       "5002   5002       0  CNhs11835   \n",
-       "5003   5003       0  CNhs11836   \n",
-       "5004   5004       0  CNhs11837   \n",
-       "5005   5005       0  CNhs11838   \n",
-       "5006   5006       0  CNhs11840   \n",
-       "5007   5007       0  CNhs11841   \n",
-       "5008   5008       0  CNhs11842   \n",
-       "5009   5009       0  CNhs11843   \n",
+       "      index  genome   identifier  \\\n",
+       "0         0       0  ENCFF833POA   \n",
+       "1         1       0  ENCFF110QGM   \n",
+       "2         2       0  ENCFF880MKD   \n",
+       "3         3       0  ENCFF463ZLQ   \n",
+       "4         4       0  ENCFF890OGQ   \n",
+       "...     ...     ...          ...   \n",
+       "5308   5308       0    CNhs14239   \n",
+       "5309   5309       0    CNhs14240   \n",
+       "5310   5310       0    CNhs14241   \n",
+       "5311   5311       0    CNhs14244   \n",
+       "5312   5312       0    CNhs14245   \n",
        "\n",
        "                                                   file  clip  scale sum_stat  \\\n",
-       "5000  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5001  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5002  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5003  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5004  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5005  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5006  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5007  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5008  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
-       "5009  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
+       "0     /home/drk/tillage/datasets/human/dnase/encode/...    32      2     mean   \n",
+       "1     /home/drk/tillage/datasets/human/dnase/encode/...    32      2     mean   \n",
+       "2     /home/drk/tillage/datasets/human/dnase/encode/...    32      2     mean   \n",
+       "3     /home/drk/tillage/datasets/human/dnase/encode/...    32      2     mean   \n",
+       "4     /home/drk/tillage/datasets/human/dnase/encode/...    32      2     mean   \n",
+       "...                                                 ...   ...    ...      ...   \n",
+       "5308  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
+       "5309  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
+       "5310  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
+       "5311  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
+       "5312  /home/drk/tillage/datasets/human/cage/fantom/C...   384      1      sum   \n",
        "\n",
-       "                                            description system_slims  \\\n",
-       "5000              CAGE:chondrosarcoma cell line:SW 1353           NA   \n",
-       "5001                 CAGE:carcinoid cell line:NCI-H1770           NA   \n",
-       "5002              CAGE:osteoclastoma cell line:Hs 706.T           NA   \n",
-       "5003            CAGE:Ewing's sarcoma cell line:Hs 863.T           NA   \n",
-       "5004  CAGE:transitional cell carcinoma cell line:Hs ...           NA   \n",
-       "5005     CAGE:alveolar cell carcinoma cell line:SW 1573           NA   \n",
-       "5006  CAGE:bronchioalveolar carcinoma cell line:NCI-...           NA   \n",
-       "5007    CAGE:bronchogenic carcinoma cell line:ChaGo-K-1           NA   \n",
-       "5008    CAGE:fibrous histiocytoma cell line:GCT TIB-223           NA   \n",
-       "5009              CAGE:hairy cell leukemia cell line:Mo           NA   \n",
+       "                                            description  \\\n",
+       "0     DNASE:cerebellum male adult (27 years) and mal...   \n",
+       "1     DNASE:frontal cortex male adult (27 years) and...   \n",
+       "2                                         DNASE:chorion   \n",
+       "3     DNASE:Ishikawa treated with 0.02% dimethyl sul...   \n",
+       "4                                         DNASE:GM03348   \n",
+       "...                                                 ...   \n",
+       "5308        CAGE:epithelioid sarcoma cell line:HS-ES-2R   \n",
+       "5309  CAGE:squamous cell lung carcinoma cell line:RE...   \n",
+       "5310                  CAGE:gastric cancer cell line:GSS   \n",
+       "5311                  CAGE:carcinoid cell line:NCI-H727   \n",
+       "5312  CAGE:lung adenocarcinoma, papillary cell line:...   \n",
        "\n",
-       "     cell_slims organ_slims developmental_slims  \n",
-       "5000         NA          NA                  NA  \n",
-       "5001         NA          NA                  NA  \n",
-       "5002         NA          NA                  NA  \n",
-       "5003         NA          NA                  NA  \n",
-       "5004         NA          NA                  NA  \n",
-       "5005         NA          NA                  NA  \n",
-       "5006         NA          NA                  NA  \n",
-       "5007         NA          NA                  NA  \n",
-       "5008         NA          NA                  NA  \n",
-       "5009         NA          NA                  NA  "
+       "                system_slims   cell_slims                      organ_slims  \\\n",
+       "0     central nervous system                                         brain   \n",
+       "1     central nervous system                                         brain   \n",
+       "2                                                 extraembryonic component   \n",
+       "3        reproductive system  cancer cell                           uterus   \n",
+       "4        integumental system   fibroblast  skin of body, connective tissue   \n",
+       "...                      ...          ...                              ...   \n",
+       "5308                      NA           NA                               NA   \n",
+       "5309                      NA           NA                               NA   \n",
+       "5310                      NA           NA                               NA   \n",
+       "5311                      NA           NA                               NA   \n",
+       "5312                      NA           NA                               NA   \n",
+       "\n",
+       "     developmental_slims  \n",
+       "0               ectoderm  \n",
+       "1               ectoderm  \n",
+       "2               mesoderm  \n",
+       "3                         \n",
+       "4               ectoderm  \n",
+       "...                  ...  \n",
+       "5308                  NA  \n",
+       "5309                  NA  \n",
+       "5310                  NA  \n",
+       "5311                  NA  \n",
+       "5312                  NA  \n",
+       "\n",
+       "[5313 rows x 12 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[5000:5010]"
+    "df"
    ]
   },
   {
