--- a/posts/2023-07-19-compare-avg3/Compare_averages.ipynb
+++ b/posts/2023-07-19-compare-avg3/Compare_averages.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "title: \"Compare Averages (relmax3)\"\n",
+    "author: \"Laura Vairus\"\n",
+    "date: \"2023-07-19\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import Libraries"
    ]
   },
