more yaml headers

--- a/posts/2023-06-08-python-basics/index.ipynb
+++ b/posts/2023-06-08-python-basics/index.ipynb
@@ -1,7 +1,8 @@
 {
   "cells": [
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
+      "id": "ab701f6a",
       "metadata": {},
       "source": [
         "---\n",
@@ -12,11 +13,11 @@
         "categories: [code, training, tutorial, cheatsheet]\n",
         "image: \"image.jpg\"\n",
         "---"
-      ],
-      "id": "ec1e0040"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "db180b31",
       "metadata": {},
       "source": [
         "### Types of Variable (Datatypes):\n",
@@ -56,23 +57,23 @@
         "## User Input\n",
         "\n",
         "If you want to interact with the user of your code, use the `input()` command\n"
-      ],
-      "id": "db180b31"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "80d71479",
       "metadata": {},
+      "outputs": [],
       "source": [
         "# General Format: \n",
         "userInput = input(\"message\")\n",
         "# will ask the user to input something, that will get assigned to varName"
-      ],
-      "id": "80d71479",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "72d048a8",
       "metadata": {},
       "source": [
         "Runnning this line of code will prompt the user to enter a response based on what you write in the \"message.\" Their response will then get assigned to your variable, in this case `userInput`\n",
@@ -86,15 +87,14 @@
         "\n",
         "\n",
         "### "
-      ],
-      "id": "72d048a8"
+      ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python3",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
-      "display_name": "Python 3 (ipykernel)"
+      "name": "python3"
     }
   },
   "nbformat": 4,
