--- a/posts/2023-07-06-hackenf/Hackathon_enformer_usage_participant.ipynb
+++ b/posts/2023-07-06-hackenf/Hackathon_enformer_usage_participant.ipynb
@@ -6,7 +6,7 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: \"blog hackenf\"\n",
+        "title: \"Hackathon Enformer\"\n",
         "author: \"Laura Vairus\"\n",
         "date: \"07-06-2023\"\n",
         "---"
