--- a/posts/2023-07-03-diabetes/diabetes2.ipynb
+++ b/posts/2023-07-03-diabetes/diabetes2.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Diabetes Practice\"\n",
+    "author: \"Laura Vairus\"\n",
+    "date: \"2023-07-03\"\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
