--- a/posts/2023-07-07-parsl-sheet/index.ipynb
+++ b/posts/2023-07-07-parsl-sheet/index.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "raw",
+      "id": "fb38a63c",
       "metadata": {},
       "source": [
         "---\n",
@@ -9,63 +10,92 @@
         "author: \"Laura Vairus\"\n",
         "date: \"07-07-2023\"\n",
         "---"
-      ],
-      "id": "fb38a63c"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "ad0548fa",
       "metadata": {},
       "source": [
         "### Imports"
-      ],
-      "id": "ad0548fa"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "id": "0f4f08e3",
       "metadata": {},
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'config'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32m/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb Cell 3\u001b[0m in \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mparsl\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mparsl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapp\u001b[39;00m \u001b[39mimport\u001b[39;00m python_app, bash_app\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mconfig\u001b[39;00m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'config'"
+          ]
+        }
+      ],
       "source": [
         "import parsl\n",
         "from parsl.app.app import python_app, bash_app"
-      ],
-      "id": "0f4f08e3",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "414616b9",
       "metadata": {},
       "source": [
         "### Making a python function parallelizable:"
-      ],
-      "id": "414616b9"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "id": "ffb13324",
       "metadata": {},
+      "outputs": [
+        {
+          "ename": "RuntimeError",
+          "evalue": "Must first load config",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[1;32m/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb Cell 5\u001b[0m in \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m param\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# call function normally and it will be run async\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m my_func(\u001b[39m'\u001b[39;49m\u001b[39mparam\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+            "File \u001b[0;32m~/miniconda3/envs/enf-tools/lib/python3.10/site-packages/parsl/app/python.py:66\u001b[0m, in \u001b[0;36mPythonApp.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     63\u001b[0m invocation_kwargs\u001b[39m.\u001b[39mupdate(kwargs)\n\u001b[1;32m     65\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_flow_kernel \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 66\u001b[0m     dfk \u001b[39m=\u001b[39m DataFlowKernelLoader\u001b[39m.\u001b[39;49mdfk()\n\u001b[1;32m     67\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     68\u001b[0m     dfk \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_flow_kernel\n",
+            "File \u001b[0;32m~/miniconda3/envs/enf-tools/lib/python3.10/site-packages/parsl/dataflow/dflow.py:1438\u001b[0m, in \u001b[0;36mDataFlowKernelLoader.dfk\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m   1436\u001b[0m \u001b[39m\"\"\"Return the currently-loaded DataFlowKernel.\"\"\"\u001b[39;00m\n\u001b[1;32m   1437\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_dfk \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1438\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mMust first load config\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m   1439\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_dfk\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Must first load config"
+          ]
+        }
+      ],
       "source": [
         "@python_app\n",
-        "def py_func(param):\n",
+        "def my_func(param):\n",
         "  # import any packages you need\n",
-        "  # code \n",
+        "  print(param)\n",
+        "  return param\n",
         "\n",
         "# call function normally and it will be run async\n",
-        "my_func(param) "
-      ],
-      "id": "ffb13324",
-      "execution_count": null,
-      "outputs": []
+        "my_func('param') "
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "fff85786",
       "metadata": {},
       "source": [
         "### Making a bash function parallelizable"
-      ],
-      "id": "fff85786"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "4f76b588",
       "metadata": {},
+      "outputs": [],
       "source": [
         "import parsl\n",
         "from parsl.app.app import bash_app\n",
@@ -80,23 +110,23 @@
         "# read the output file\n",
         "with open('output-filename.stdout', 'r') as f:\n",
         "     print(f.read())"
-      ],
-      "id": "4f76b588",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "85541f3d",
       "metadata": {},
       "source": [
         "### AppFutures\n",
         "when you run apps that take a long time, instead of getting a variable for your return result, you get an appfuture variable, which holds information about the running code."
-      ],
-      "id": "85541f3d"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "3aa5e6ae",
       "metadata": {},
+      "outputs": [],
       "source": [
         "@python_app\n",
         "def func ():\n",
@@ -116,23 +146,23 @@
         "\n",
         "# attribute of appfuture, list of all DataFutures of function\n",
         "app_future.outputs"
-      ],
-      "id": "3aa5e6ae",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "80ef01a7",
       "metadata": {},
       "source": [
         "### DataFutures\n",
         "when you run apps that take a long time that return files, instead of getting the files for your results, you get an datafutures, which can be accessed through your appfuture's attributes, and which contain information about the files you will receive. "
-      ],
-      "id": "80ef01a7"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "074df3ad",
       "metadata": {},
+      "outputs": [],
       "source": [
         "#assigning variable\n",
         "data_future1 = app_future[0]\n",
@@ -148,27 +178,36 @@
         "\n",
         "# references the parent AppFuture object that produced the data.\n",
         "data_future1.parent"
-      ],
-      "id": "074df3ad",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "c41b4de5",
       "metadata": {},
       "source": [
         "### dataflowkernel\n",
         "\n",
         "wip\n"
-      ],
-      "id": "c41b4de5"
+      ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python3",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
-      "display_name": "Python 3 (ipykernel)"
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.6"
     }
   },
   "nbformat": 4,
