added enf-pipeline and edited comparisons

--- a/posts/2023-07-19-compare-avg3/Compare_averages.ipynb
+++ b/posts/2023-07-19-compare-avg3/Compare_averages.ipynb
@@ -53,8 +53,8 @@
     "# import packages\n",
     "import tensorflow as tf\n",
     "# Make sure the GPU is enabled \n",
-    "assert tf.config.list_physical_devices('GPU'), 'Start the colab kernel with GPU: Runtime -> Change runtime type -> GPU'\n",
-    "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))\n",
+    "#assert tf.config.list_physical_devices('GPU'), 'Start the colab kernel with GPU: Runtime -> Change runtime type -> GPU'\n",
+    "#print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))\n",
     "import tensorflow_hub as hub # for interacting with saved models and tensorflow hub\n",
     "import joblib\n",
     "import gzip # for manipulating compressed files\n",
@@ -613,12 +613,9 @@
    "source": [
     "# Comparison functions\n",
     "\n",
-    "def get_diffmats(pre_avg, post_avg):\n",
-    "    pre = pre_avg\n",
-    "    post = post_avg\n",
-    "    \n",
+    "def get_diffmats(mat1, mat2):\n",
     "    # make diffmats\n",
-    "    diffmat = pre_avg - post_avg\n",
+    "    diffmat = mat1 - mat2\n",
     "    abs_diffmat = np.abs(diffmat)\n",
     "    # rel_diffmat = abs_diffmat / (np.abs(pre_avg) + np.abs(post_avg) + 1**-16)\n",
     "    # relmax_diffmat = get_relmax(abs_diffmat) \n",
@@ -626,10 +623,10 @@
     "    # rel95_diffmat = get_rel99(abs_diffmat)\n",
     "\n",
     "    # new diff mat\n",
-    "    pre_colwise_maxes = np.max(pre, axis=0)\n",
-    "    post_colwise_maxes = np.max(post, axis=0)\n",
+    "    mat1_colwise_maxes = np.max(mat1, axis=0)\n",
+    "    mat2_colwise_maxes = np.max(mat2, axis=0)\n",
     "\n",
-    "    tot_colwise_maxes = np.maximum(pre_colwise_maxes, post_colwise_maxes)\n",
+    "    tot_colwise_maxes = np.maximum(mat1_colwise_maxes, mat2_colwise_maxes)\n",
     "\n",
     "    relmax3_diffmat = diffmat / tot_colwise_maxes\n",
     "\n",
@@ -639,6 +636,10 @@
     "\n",
     "\n",
     "def get_summary(arr):\n",
+    "    \"\"\"\n",
+    "    input: any np array \n",
+    "    output: dict of its mean, median, std_dev, min, max, total sum, q1, q3, and iqr\n",
+    "    \"\"\"\n",
     "    summary = {\n",
     "        \"mean\": np.mean(arr),\n",
     "        \"median\": np.median(arr),\n",
@@ -654,6 +655,10 @@
     "\n",
     "\n",
     "def get_colwise_summary_df(arr):\n",
+    "    \"\"\"\n",
+    "    input: a 2+ dim np array \n",
+    "    output: summary of every column as a pd dataframe\n",
+    "    \"\"\"\n",
     "    # Initialize empty dictionary\n",
     "    col_summaries = {}\n",
     "    # Compute summary statistics for each column and store in dictionary\n",
@@ -669,6 +674,18 @@
     "\n",
     "\n",
     "def plot_tols_vs_outs(arr, mintol, maxtol, steps):\n",
+    "    \"\"\"\n",
+    "    Plots tolerance vs percentage of outliers for a np array\n",
+    "\n",
+    "    Parameters:\n",
+    "    arr (np array): array you're interested in\n",
+    "    mintol (int): minimum tolerance you want\n",
+    "    maxtol (int): maximum tolerance you want\n",
+    "    steps (int): amount of points you want plotted between your min and max tolerances\n",
+    "\n",
+    "    Returns:\n",
+    "    None\n",
+    "    \"\"\"\n",
     "    # make x and y values\n",
     "    x = np.linspace(maxtol, mintol, steps)\n",
     "    y = []\n",
@@ -687,12 +704,32 @@
     "\n",
     "\n",
     "def get_outliers(arr, tol):\n",
+    "    \"\"\"\n",
+    "    returns every value of a np array that is above a specified tolerance\n",
+    "\n",
+    "    Parameters:\n",
+    "    arr (np array): array you're interested in\n",
+    "    tol (int): max value you tolerate, anything above this is considered an outlier\n",
+    "\n",
+    "    Returns:\n",
+    "    a np array of every value above the tolerance\n",
+    "    \"\"\"\n",
     "    outs = arr[arr > tol]\n",
     "\n",
     "    return outs\n",
     "\n",
     "\n",
     "def get_outlier_inds(arr, tol):\n",
+    "    \"\"\"\n",
+    "    returns the index of every value of a np array that is above a specified tolerance\n",
+    "\n",
+    "    Parameters:\n",
+    "    arr (np array): array you're interested in\n",
+    "    tol (int): max value you tolerate, anything above this is considered an outlier\n",
+    "\n",
+    "    Returns:\n",
+    "    a list of 0: a list of tuples of indicies, 1: a list of row indices, and 2: a list of column indicies, of every value above the tolerance\n",
+    "    \"\"\"\n",
     "    # get list of ind tuples\n",
     "    out_inds = np.where(arr > tol)\n",
     "    out_inds_arr = np.array(list(zip(out_inds[0], out_inds[1])))\n",
@@ -704,6 +741,19 @@
     "\n",
     "\n",
     "def plot_hist(arr, bin_num, xlab='Value', ylab='Frequency', title='Histogram'):\n",
+    "    \"\"\"\n",
+    "    plots a histogram of any np array\n",
+    "\n",
+    "    Parameters:\n",
+    "    arr (np array): array you're interested in\n",
+    "    bin_num (int): amount of bins you want plotted\n",
+    "    xlab (str): x-axis label\n",
+    "    ylab (str): y-axis label\n",
+    "    title (str): title label\n",
+    "\n",
+    "    Returns:\n",
+    "    None\n",
+    "    \"\"\"\n",
     "    plt.hist(arr, bins=bin_num)\n",
     "    plt.title(title)\n",
     "    plt.xlabel(xlab)\n",
@@ -1269,7 +1319,7 @@
     }
    ],
    "source": [
-    "len(relmax[relmax>0.01])"
+    "len(relmax3[relmax3>0.01])"
    ]
   },
   {
@@ -2027,7 +2077,7 @@
    "source": [
     "# make df of info of outliers: track, bin#, difference, and slims\n",
     "# organized by increasing difference\n",
-    "df_relmax_tol16 = test.make_outs_df(relmax, 16)\n",
+    "df_relmax_tol16 = make_outs_df(relmax3, 16)\n",
     "df_relmax_tol16"
    ]
   },
