added parsl-sheet edits and edge middle preds post

--- a/posts/2023-07-21-comparing-edge-middle-preds/test_output.ipynb
+++ b/posts/2023-07-21-comparing-edge-middle-preds/test_output.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Comparing enformer predictions on edge vs center bins\"\n",
+    "author: \"Laura Vairus\"\n",
+    "date: \"2023-07-21\"\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
