--- a/posts/2023-07-07-parsl-sheet/index.ipynb
+++ b/posts/2023-07-07-parsl-sheet/index.ipynb
@@ -22,22 +22,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "id": "0f4f08e3",
-      "metadata": {},
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'config'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[1;32m/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb Cell 3\u001b[0m in \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mparsl\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mparsl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapp\u001b[39;00m \u001b[39mimport\u001b[39;00m python_app, bash_app\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mconfig\u001b[39;00m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'config'"
-          ]
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
         }
-      ],
+      },
+      "outputs": [],
       "source": [
         "import parsl\n",
         "from parsl.app.app import python_app, bash_app"
@@ -53,9 +45,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "id": "ffb13324",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [
         {
           "ename": "RuntimeError",
@@ -64,9 +60,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[1;32m/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb Cell 5\u001b[0m in \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m param\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# call function normally and it will be run async\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lauvav/Github/vairus-blog/posts/2023-07-07-parsl-sheet/index.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m my_func(\u001b[39m'\u001b[39;49m\u001b[39mparam\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-            "File \u001b[0;32m~/miniconda3/envs/enf-tools/lib/python3.10/site-packages/parsl/app/python.py:66\u001b[0m, in \u001b[0;36mPythonApp.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     63\u001b[0m invocation_kwargs\u001b[39m.\u001b[39mupdate(kwargs)\n\u001b[1;32m     65\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_flow_kernel \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 66\u001b[0m     dfk \u001b[39m=\u001b[39m DataFlowKernelLoader\u001b[39m.\u001b[39;49mdfk()\n\u001b[1;32m     67\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     68\u001b[0m     dfk \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_flow_kernel\n",
-            "File \u001b[0;32m~/miniconda3/envs/enf-tools/lib/python3.10/site-packages/parsl/dataflow/dflow.py:1438\u001b[0m, in \u001b[0;36mDataFlowKernelLoader.dfk\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m   1436\u001b[0m \u001b[39m\"\"\"Return the currently-loaded DataFlowKernel.\"\"\"\u001b[39;00m\n\u001b[1;32m   1437\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_dfk \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1438\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mMust first load config\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m   1439\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_dfk\n",
+            "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[39mreturn\u001b[39;00m param\n\u001b[1;32m      7\u001b[0m \u001b[39m# call function normally and it will be run async\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m my_func(\u001b[39m'\u001b[39;49m\u001b[39mparam\u001b[39;49m\u001b[39m'\u001b[39;49m) \n",
+            "File \u001b[0;32m~/.local/polaris/conda/2023-01-10-unstable/lib/python3.10/site-packages/parsl/app/python.py:66\u001b[0m, in \u001b[0;36mPythonApp.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     63\u001b[0m invocation_kwargs\u001b[39m.\u001b[39mupdate(kwargs)\n\u001b[1;32m     65\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_flow_kernel \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 66\u001b[0m     dfk \u001b[39m=\u001b[39m DataFlowKernelLoader\u001b[39m.\u001b[39;49mdfk()\n\u001b[1;32m     67\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     68\u001b[0m     dfk \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_flow_kernel\n",
+            "File \u001b[0;32m~/.local/polaris/conda/2023-01-10-unstable/lib/python3.10/site-packages/parsl/dataflow/dflow.py:1432\u001b[0m, in \u001b[0;36mDataFlowKernelLoader.dfk\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m   1430\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Return the currently-loaded DataFlowKernel.\"\"\"\u001b[39;00m\n\u001b[1;32m   1431\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_dfk \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1432\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mMust first load config\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m   1433\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_dfk\n",
             "\u001b[0;31mRuntimeError\u001b[0m: Must first load config"
           ]
         }
@@ -94,7 +90,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "4f76b588",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "import parsl\n",
@@ -125,7 +125,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "3aa5e6ae",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "@python_app\n",
@@ -161,7 +165,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "074df3ad",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "#assigning variable\n",
@@ -193,21 +201,9 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.10.6"
     }
   },
   "nbformat": 4,
