edited post file names and added categories

--- a/posts/2023-06-23-conda/index.qmd
+++ b/posts/2023-06-23-conda/index.qmd
@@ -1,7 +1,8 @@
 ---
-title: "Using Conda"
+title: "How to Use Conda"
 author: "Laura Vairus"
 date: "06-23-2023"
+categories: [howto]
 ---
 
 You use python to code
