--- a/posts/2023-07-03-diabetes1/diabetes1.ipynb
+++ b/posts/2023-07-03-diabetes1/diabetes1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Diabetes Example\"\n",
+    "title: \"Diabetes EDA Example\"\n",
     "author: \"Laura Vairus\"\n",
     "date: \"2023-07-03\"\n",
     "---"
