--- a/posts/2023-07-03-diabetes2/diabetes2.ipynb
+++ b/posts/2023-07-03-diabetes2/diabetes2.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Diabetes Practice\"\n",
+    "title: \"Diabetes EDA Practice\"\n",
     "author: \"Laura Vairus\"\n",
     "date: \"2023-07-03\"\n",
     "---"
