--- a/posts/2023-07-20-ref-tiled/local-tile-1-4.ipynb
+++ b/posts/2023-07-20-ref-tiled/local-tile-1-4.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "getting the intervals for every tile of chromosomes 1 through 4"
+    "working locally, \n",
+    "getting the intervals for every tile of chromosomes 1 through 4\n",
+    "function writes a new txt file with all the intervals for reftile run"
    ]
   },
   {
@@ -102,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "make_ints('1', 249250621)"
+    "# make_ints('1', 249250621)"
    ]
   },
   {
