added yaml headers

--- a/posts/2023-07-20-parsl-test/parsl-test.ipynb
+++ b/posts/2023-07-20-parsl-test/parsl-test.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Parsl testing\"\n",
+    "author: \"Hae Kyung Im\"\n",
+    "date: \"2023-07-20\"\n",
+    "categories: [code]\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
