--- a/posts/2023-07-20-ref-tiled/local-tile-1-4.ipynb
+++ b/posts/2023-07-20-ref-tiled/local-tile-1-4.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "title: \"making tile intervals for chr1-4, local\"\n",
+    "author: \"Laura Vairus\"\n",
+    "date: \"2023-07-20\"\n",
+    "categories: [code]\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "working locally, \n",
     "getting the intervals for every tile of chromosomes 1 through 4\n",
     "function writes a new txt file with all the intervals for reftile run"
