--- a/posts/2023-08-10-concat-query/concat.ipynb
+++ b/posts/2023-08-10-concat-query/concat.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Enformer Reference Epigenome\"\n",
+    "author: \"Laura Vairus\"\n",
+    "date: \"2023-08-10\"\n",
+    "categories: [howto, code]\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
