--- a/posts/2023-07-20-ref-tiled/tile-intervals-ref-1-4.ipynb
+++ b/posts/2023-07-20-ref-tiled/tile-intervals-ref-1-4.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "title: \"making tile intervals for chr 20-Y\"\n",
+    "author: \"Laura Vairus\"\n",
+    "date: \"2023-07-20\"\n",
+    "categories: [code]\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Getting the intervals for every tile of chromosomes 20, 21, 22, X, Y"
    ]
   },
