adding concat-query and ground truth comparison

--- a/posts/2023-08-10-concat-query-method-howto/blog-concat-query.ipynb
+++ b/posts/2023-08-10-concat-query-method-howto/blog-concat-query.ipynb
@@ -5,14 +5,45 @@
    "metadata": {},
    "source": [
     "---\n",
+<<<<<<<< HEAD:posts/2023-08-10-concat-query-method-howto/blog-concat-query.ipynb
+    "title: \"Prerunninng, Concatenating, and Querying Enformer Reference Epigenome\"\n",
+    "author: \"Laura Vairus\"\n",
+    "date: \"2021-08-11\"\n",
+    "categories: [method, code, howto]\n",
+========
     "title: \"Enformer Reference Epigenome\"\n",
     "author: \"Laura Vairus\"\n",
     "date: \"2023-08-10\"\n",
     "categories: [howto, code]\n",
+>>>>>>>> d694e1a2fde303cbc2534d2c009d30e4d6aa12e9:posts/2023-08-10-concat-query-method-howto/epigenome.ipynb
     "---"
    ]
   },
   {
+<<<<<<<< HEAD:posts/2023-08-10-concat-query-method-howto/blog-concat-query.ipynb
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To save time and compute power, we decided to run enformer on the whole genome and set up a querying system so we could read in enformer outputs instead of needing to use the pipeline and compute nodes to get a reference prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first ran enformer on intervals of it's output length (896*128 = 114688) which I called L. Each iterval gave us a prediction of 896*5313, which I call tiles. The intervals were overlapped such that every subsequential interval started halfway through the previous interval. So the intervals were O-L, L/2-3L/2, L-2L, 3L/2-5L/2, and so on. We overlapped them so that we could combine the middle of each tile as we decided the center of one prediction would be more accurate than the ending and beginning edges of the two tiles above and below it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code:"
+   ]
+  },
+  {
+========
+>>>>>>>> d694e1a2fde303cbc2534d2c009d30e4d6aa12e9:posts/2023-08-10-concat-query-method-howto/epigenome.ipynb
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
