changes from local, parsl, concat

--- a/posts/2023-07-20-parsl-test/parsl-test.ipynb
+++ b/posts/2023-07-20-parsl-test/parsl-test.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
     "    time.sleep(5)\n",
     "    return 'Hello World!'\n",
     "\n",
-    "print(slow_hello().result())"
+    "print(slow_hello().done())"
    ]
   },
   {
