added to ground truth

--- a/posts/2023-08-15-compare-mats-groundtruth/blog_code.ipynb
+++ b/posts/2023-08-15-compare-mats-groundtruth/blog_code.ipynb
@@ -19,7 +19,7 @@
     "When making the epigenome to query, we want it to be as accurate as possible. Some papers decribe they got their predictions by running enformer on the target interval, randomly shifted up and down, reverse complementing, and averaging them all together. To check which way is best, I made 4 different prediction matrices to evaluate by comparing against the ground truth\n",
     "- (forward) normal forward prediction on the target interval\n",
     "- (reverse) reverse complement prediction on the target interval\n",
-    "- (forrev) average of the forward and reverse complement predictions abovve\n",
+    "- (forrev) average of the forward and reverse complement predictions above\n",
     "- (forrevshift) average of the forward and reverse complement prediction on the target interval normally, shifted up 3bps, and shifted down 3bps"
    ]
   },
