--- a/posts/2023-07-19-compare-avg3/Compare_averages.ipynb
+++ b/posts/2023-07-19-compare-avg3/Compare_averages.ipynb
@@ -8,6 +8,7 @@
     "title: \"Compare Averages (relmax3)\"\n",
     "author: \"Laura Vairus\"\n",
     "date: \"2023-07-19\"\n",
+    "categories: [code]\n",
     "---"
    ]
   },
@@ -1057,7 +1058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing Functions"
+    "## Using Comparison Functions"
    ]
   },
   {
@@ -1075,8 +1076,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get all diffmats\n",
-    "#abs, rel, relmax, relmed, rel99 = get_diffmats(pre_avg, post_avg)\n",
+    "# get diffmat\n",
     "relmax3 = get_diffmats(pre_avg, post_avg)"
    ]
   },
@@ -1105,7 +1105,7 @@
     }
    ],
    "source": [
-    "# get total summary of diffmat\n",
+    "# get summary of diffmat\n",
     "get_summary(relmax3)"
    ]
   },
@@ -1322,7 +1322,7 @@
    "source": [
     "# get column-wise summary for more information\n",
     "colsum = get_colwise_summary_df(relmax3)\n",
-    "colsum"
+    "colsum.head()"
    ]
   },
   {
@@ -1347,11 +1347,10 @@
     }
    ],
    "source": [
-    "m_stats_df = colsum[['median', 'maximum', 'minimum', ]]#'maximum']]\n",
+    "# graphing curve of meds in colsum with corresponding min and max\n",
     "\n",
+    "m_stats_df = colsum[['median', 'maximum', 'minimum', ]]\n",
     "m_stats_df_sorted = m_stats_df.sort_values('median').reset_index(drop=True)\n",
-    "\n",
-    "\n",
     "for column in m_stats_df_sorted.columns:\n",
     "    plt.plot(m_stats_df_sorted[column], label=column)\n",
     "\n",
@@ -1387,7 +1386,7 @@
     }
    ],
    "source": [
-    "plot_hist(colsum['mean'].tolist(), 200, title=\"mean\") "
+    "plot_hist(colsum['mean'].tolist(), 200, title=\"histogram of column means\") "
    ]
   },
   {
@@ -1412,7 +1411,7 @@
     }
    ],
    "source": [
-    "plot_hist(colsum['maximum'].tolist(), 200, title=\"maximum\")"
+    "plot_hist(colsum['maximum'].tolist(), 200, title=\"histogram of column maxes\")"
    ]
   },
   {
@@ -1437,7 +1436,7 @@
     }
    ],
    "source": [
-    "plot_hist(colsum['minimum'].tolist(), 200, title=\"minimum\")"
+    "plot_hist(colsum['minimum'].tolist(), 200, title=\"histogram of column mins\")"
    ]
   },
   {
@@ -1468,7 +1467,7 @@
     "plt.plot(sorted_data)\n",
     "plt.xlabel('Index')\n",
     "plt.ylabel('Value')\n",
-    "plt.title('Sorted Array')\n",
+    "plt.title('Sorted Medians')\n",
     "plt.show()"
    ]
   },
@@ -1495,26 +1494,6 @@
    ],
    "source": [
     "plot_hist(colsum['median'].tolist(), 200, title=\"median\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(0.1, 1, 10)"
    ]
   },
   {
@@ -1825,7 +1804,7 @@
     "# make df of info of outliers: track, bin#, difference, and slims\n",
     "# organized by increasing difference\n",
     "df_relmax_tol16 = make_outs_df(relmax3, 16)\n",
-    "df_relmax_tol16"
+    "df_relmax_tol16.head()"
    ]
   },
   {
@@ -3052,7 +3031,7 @@
     "    sys_list = sys.split(\", \")\n",
     "    relmax16sys += sys_list\n",
     "\n",
-    "relmax16sys"
+    "relmax16sys[:10]"
    ]
   },
   {
@@ -3122,7 +3101,7 @@
     "plt.xticks(rotation=90)  # Rotate x-axis labels for better readability\n",
     "plt.xlabel('System')\n",
     "plt.ylabel('Count')\n",
-    "plt.title('System Counts')\n",
+    "plt.title('Systems related to tracks with biggest differences')\n",
     "\n",
     "plt.show()"
    ]
