--- a/posts/2023-08-10-concat-query-method-howto/blog-concat-query.ipynb
+++ b/posts/2023-08-10-concat-query-method-howto/blog-concat-query.ipynb
@@ -298,9 +298,50 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def query_epigenome(path_to_enfref, chr_num, center_bp, num_bins=896, tracks=-1):\n",
+    "    \"\"\"\n",
+    "    Parameters:\n",
+    "        path_to_enfref (str): path to the directory containing the concatenated reference enformer files\n",
+    "        chr_num (int/string): chromosome number\n",
+    "        center_bp (int): center base pair position (1-indexed)\n",
+    "        num_bins (int): number of bins to extract centered around center_bp (default: 896) \n",
+    "            note: if the number of bins is even, the center bin will be in the second half of the array\n",
+    "        tracks (int list): list of tracks to extract (default: all 5313 tracks)\n",
+    "\n",
+    "    Returns:\n",
+    "        epigen (np.array): enformer predictions centered at center_bp of shape (num_bins, len(tracks))\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # from chr_num choose file\n",
+    "    filename = f\"chr{chr_num}_cat.h5\"\n",
+    "    filename = \"chr21_test_cat.h5\"\n",
+    "\n",
+    "    # from position choose center bin\n",
+    "    center_ind = center_bp - 1\n",
+    "    center_bin = center_ind // 128\n",
+    "    \n",
+    "    # from bins choose number of bins\n",
+    "    half_bins = num_bins // 2\n",
+    "    start_bin = center_bin - half_bins\n",
+    "    end_bin = center_bin + half_bins\n",
+    "    if num_bins % 2 != 0: # if num_bins is odd\n",
+    "        end_bin += 1\n",
+    "\n",
+    "    # get bins (with all tracks)\n",
+    "    with h5py.File(f\"{path_to_enfref}/{filename}\", \"r\") as f:\n",
+    "        epigen = f[f'chr{chr_num}'][()][start_bin:end_bin] # np.array (num_bins, 5313)\n",
+    "\n",
+    "    # get tracks if list provided\n",
+    "    if tracks != -1:\n",
+    "        epigen = epigen[:, tracks] # np.array (num_bins, len(tracks))\n",
+    "\n",
+    "    return epigen\n"
+   ]
   }
  ],
  "metadata": {
